# mcp-banking

./: CHANGELOG.md  Cargo.toml  README.md  mcp-server.toml
docs/: api-reference.md  backends.md
src/: lib.rs  main.rs  mono.rs  open_banking.rs  plaid.rs  server.rs  types.rs
