[package]
name = "mcp-banking"
version = "1.0.2"
edition = "2024"
authors = ["James Karanja <james.karanja@zavora.ai>"]
description = "Enterprise Banking MCP Server — unified access to Plaid, Mono (Africa), and Open Banking UK/EU for accounts, transactions, balances, and payments"
license = "Apache-2.0"
repository = "https://github.com/zavora-ai/mcp-banking"
homepage = "https://enterprise.adk-rust.com"
keywords = ["mcp", "banking", "plaid", "open-banking", "fintech"]
categories = ["development-tools", "api-bindings"]
readme = "README.md"

[features]
default = ["plaid", "mono"]
plaid = []
mono = []
open-banking = []
all-backends = ["plaid", "mono", "open-banking"]

[dependencies]
adk-mcp-sdk = "0.1"
rmcp = { version = "1.7", features = ["server", "transport-io", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
schemars = "1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"

[workspace]
